trunk/OldArchive/cbba63ce7d802f9f6e5e07a9c2c66cf4-25dabfc2c190f5ef027f31d968947336/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:12:25: error: no function template matches function template specialization 'operator+'
        friend Iterator operator+<>(int, const typename Array<T>::Iterator&);
                        ^
main.cpp:25:26: note: in instantiation of member class 'Array<int>::Iterator' requested here
    Array<int>::Iterator it;
                         ^
1 error generated.
